Implement update user profile for admin
